--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     </div>
      
     </div>
-    <script src="./calculadora/scriptCalc.js"></script>
+    <script src="./scriptCalc.js"></script>
   </body>
 </html>
